// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBoundary should render children 1`] = `
<div>
  children
</div>
`;

exports[`ErrorBoundary should render children if error 1`] = `
<div>
  children
  <Component />
</div>
`;
